# ScaleSC

./: .gitignore  LICENSE  README.md  Tutorial_scaleSC.ipynb  environment.yaml  environment.yml  pyproject.toml  scalesc  q
docs/: 404.html  index.html  sitemap.xml
docs/api-docs/: index.html
docs/api-docs/harmonypy_gpu/: index.html
docs/api-docs/kernels/: index.html
docs/api-docs/pp/: index.html
docs/api-docs/trim_merge_marker/: index.html
docs/api-docs/util/: index.html
docs/css/: extra.css
docs/search/: search_index.json
scalesc/: __init__.py  harmonypy_gpu.py  kernels.py  main.py  merge_n_find_marker.py  pp.py  split_on_sample.py  trim_merge_marker.py  util.py
src/: gpu.err  gpu_demo.py  inputs  sh_gpu.sh  time.cost__gpu__after.pca.True_mm.True_pool.alc.False__70k_human_lung.csv
src/.ipynb_checkpoints/: cpu_demo-checkpoint.py  sh_cpu-checkpoint.sh
src/archive_err/: gpu.err  gpu_2.err
src/archive_files/: blog_scripts.py
src/log_time/: time.cost__cpu__1.3M_mouse_brain.csv  time.cost__cpu__70k_human_lung.csv  time.cost__gpu__after.pca.False_mm.False_pool.alc.False__70k_human_lung.csv  time.cost__gpu__after.pca.False_mm.False_pool.alc.True__70k_human_lung.csv  time.cost__gpu__after.pca.True_mm.False_pool.alc.False__70k_human_lung.csv  time.cost__gpu__after.pca.True_mm.False_pool.alc.True__70k_human_lung.csv
src/log_time/.ipynb_checkpoints/: time.cost__cpu__70k_human_lung-checkpoint.csv  time.cost__gpu__mm.False_pool.alc.True__70k_human_lung-checkpoint.csv  (+4 more)
src/scalesc/: __init__.py  harmonypy_gpu.py  trim_merge_marker.py  util.py
